.golden/6097241206483808698/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:26:
  |
7 | main = putStrLn [f|hello } world|]
  |                          ^
unexpected '}'
expecting "{{", "}}", '{', or end of input

    • In the quasi-quotation: [f|hello } world|]
  |
7 | main = putStrLn [f|hello } world|]
  |                    ^^^^^^^^^^^^^^^
